Fixed scrollbar.

--- a/FlowManager/FlowManager.Client/Components/Admin/WorkflowCarousel/WorkflowCarousel.razor.css
+++ b/FlowManager/FlowManager.Client/Components/Admin/WorkflowCarousel/WorkflowCarousel.razor.css
@@ -117,7 +117,6 @@
     padding: 20px;
     scroll-behavior: smooth;
     scrollbar-width: thin;
-    scrollbar-color: #4285f4 #f1f3f4;
 }
 
 /* NAVIGATION CONTROLS */
